Added brand colors and customized navbar

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,8 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$stepify-background: #BDC9C7;
+$stepify-salmon: #FD896D;
+$stepify-dark-salmon: #C96142;
+$stepify-gray: #999999;
+$stepify-dark-gray: #2C2C2C;
