--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,6 +39,8 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
+      <div class="btn nav-bar-btn"> Create Step-list</div>
+
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
