Crud working for steplist

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
 <h1>Pages#home</h1>
+<h2>Where all Stpelists live</h2>
+<h3>Total steplists: <%= Steplist.count %></h3>
+
+<ul>
+  <% Steplist.all.each do  |steplist|%>
+    <li>
+      <%= link_to "#{steplist.title}",steplist_path(steplist) %>
+    </li>
+  <% end %>
+</ul>
+
+
+ <%= link_to "Crate new steplist", new_steplist_path, class: 'btn btn-success btn-lg' %>
 <p>Find me in app/views/pages/home.html.erb</p>
