crud working for step

--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -3,13 +3,20 @@
 <h3>Steplist id: <%= @steplist.id  %></h3>
 <h3>Steplist id: <%= @steplist.description  %></h3>
 <h4>Total Steps for this steplist: <%= @steplist.steps.count %></h4>
-  <ul>
+  <ol>
     <% @steplist.steps.each do |step|  %>
     <li>
         <%=step.title %>
+        <%= link_to 'delete',steplist_step_path(@steplist, step),method: :delete,data:{confim: "no going back"}, class: 'btn btn-danger btn-xs' %>
+        <%= link_to 'edit',edit_steplist_step_path(@steplist, step),class: 'btn btn-success btn-xs' %>
+        <br>
+        <%= step.description  %>
     </li>
     <% end %>
-  </ul>
+  </ol>
+
+  <h4>Add a Step to this steplist</h4>
+  <%= render 'shared/form_step'  %>
 
 
 <%= link_to "Edit", edit_steplist_path(@steplist), class: 'btn btn-success btn-lg'  %>
