Created timeline, added css for timeline, updated colors for steplist show

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,3 +13,5 @@ $stepify-salmon: #FD896D;
 $stepify-dark-salmon: #C96142;
 $stepify-gray: #999999;
 $stepify-dark-gray: #2C2C2C;
+$stepify-light-gray: #F2F2F2;
+
