--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -1,3 +1,4 @@
+<% %>
 <h1>Steplists#show</h1>
 <h2>Show page for Steplist title: <%= @steplist.title %></h2>
 <h3>Steplist id: <%= @steplist.id  %></h3>
@@ -7,10 +8,12 @@
     <% @steplist.steps.each do |step|  %>
     <li>
         <%=step.title %>
-        <%= link_to 'delete',steplist_step_path(@steplist, step),method: :delete,data:{confim: "no going back"}, class: 'btn btn-danger btn-xs' %>
-        <%= link_to 'edit',edit_steplist_step_path(@steplist, step),class: 'btn btn-success btn-xs' %>
+        step id <%=step.id %>
         <br>
         <%= step.description  %>
+        <%= link_to 'edit', edit_steplist_step_path(@steplist, step), class: 'btn btn-primary btn-xs' %>
+        <%= link_to 'delete',steplist_step_path(@steplist, step),method: :delete, data: {confirm: 'No going back'}, class: 'btn btn-danger btn-xs'  %>
+
     </li>
     <% end %>
   </ol>
