--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TODO</title>
+     <title>Stepify - Every Step counts</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+    <title>Stepify - Every Step counts</title>
+    <meta name="description" content="Create and find simple easy-to-follow steplists to acomplish all types and tasks" >
+    <meta property="og:title" content="Stepify, every step counts">
+    <meta property="og:image" content="#">
+    <meta property="og:description" content="Stepify is the online tool for craft, find and share the steplists towards anything and everything">
+    <meta property="og:site_name" content="Stepify"/>
+
   </head>
   <body>
     <%= render 'shared/navbar' %>
