--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,4 +1,4 @@
-<h1>User#welcome</h1>
+<h1>Hi, <%= @user.email %></h1>
 
 <p>
   <%= @greeting %>, find me in app/views/user_mailer/welcome.html.erb
