--- a/app/views/shared/_form_step.html.erb
+++ b/app/views/shared/_form_step.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@steplist, @step] do |f| %>
+<%= simple_form_for([steplist, step], remote: true ) do |f| %>
 <%= f.input :title %>
 <%= f.input :description %>
 <%= f.submit %>
