ajax done for steps

--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -28,7 +28,7 @@
   <div class="step-container" >
     <table class='table' id="steps">
     <% @steplist.steps.each do |step|  %>
-      <%= render 'shared/show_step', step: step, steplist: @steplist %>
+      <%= render 'shared/show_step', step: step  %>
     <% end %>
     </table>
   </div>
