--- a/app/views/shared/_show_step.html.erb
+++ b/app/views/shared/_show_step.html.erb
@@ -1,5 +1,5 @@
 
-<tr>
+<tr data-step-id='<%= step.id %>'>
   <th>
     <%= step.title  %>
   </th>
@@ -7,7 +7,8 @@
     <%= step.description  %>
   </td>
   <td>
-    <%= link_to '<i class="fa fa-trash fa-sm"></i>'.html_safe, steplist_step_path(steplist, step), class: 'btn btn-danger btn-xs', method: :delete,remote: true, data: {confirm: "No going back"}   %>
-    <%= link_to '<i class="fa fa-edit fa-xs"></i>'.html_safe, edit_steplist_step_path(steplist, step), class: 'btn btn-primary btn-xs'  %>
+    <%= link_to '<i class="fa fa-trash fa-sm"></i>'.html_safe, steplist_step_path(@steplist, step), class: 'btn btn-danger btn-xs', method: :delete,remote: true, data: {confirm: "No going back"}   %>
+    <%= link_to '<i class="fa fa-edit fa-xs"></i>'.html_safe, edit_steplist_step_path(@steplist, step), class: 'btn btn-primary btn-xs'  %>
   </td>
 </tr>
+
