--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -22,8 +22,12 @@
   <h3>Steplist id: <%= @steplist.id  %></h3>
   <h3>Steplist id: <%= @steplist.description  %></h3>
   <h4>Total Steps for this steplist: <%= @steplist.steps.count %></h4>
-  <%= link_to "Edit", edit_steplist_path(@steplist), class: 'btn btn-success'  %>
-  <%= link_to "Destroy", steplist_path(@steplist),method: :delete,data: {confirm: "No going Back"}, class: 'btn btn-danger'  %>
+
+  <% if current_user == @steplist.user %>
+    <%= link_to "Edit", edit_steplist_path(@steplist), class: 'btn btn-success'  %>
+    <%= link_to "Destroy", steplist_path(@steplist),method: :delete,data: {confirm: "No going Back"}, class: 'btn btn-danger'  %>
+  <% end %>
+
 
   <div class="step-container" >
     <table class='table' id="steps">
@@ -33,11 +37,10 @@
     </table>
   </div>
 
-  <h4>Add a Step to this steplist</h4>
-  <%= render 'shared/form_step', steplist: @steplist, step: @step  %>
-
-
-  <p>Find me in app/views/steplists/show.html.erb</p>
+  <% if current_user == @steplist.user %>
+    <h4>Add a Step to your steplist</h4>
+    <%= render 'shared/form_step', steplist: @steplist, step: @step  %>
+  <% end %>
 
    <%= render 'shared/step_card' %>
 
