--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -42,7 +42,17 @@
     <%= render 'shared/form_step', steplist: @steplist, step: @step  %>
   <% end %>
 
-   <%= render 'shared/step_card' %>
 
 </div>
 
+<!-- RENDER LÍNEA DE TIEMPO -->
+
+<div style="background-color: #F2F2F2; ">
+
+<p>Find me in app/views/steplists/show.html.erb</p>
+
+<section id="cd-timeline" class="cd-container">
+ <%= render 'shared/step_card' %>
+</section>
+
+</div>
