--- a/app/views/shared/_step_card.html.erb
+++ b/app/views/shared/_step_card.html.erb
@@ -1,17 +1,18 @@
-
 <% @steplist.steps.each do |step|  %>
-<section id="cd-timeline" class="cd-container">
+
     <div class="cd-timeline-block">
-      <div class="cd-timeline-img cd-picture">
-        <img src="#" alt="state">
+      <div class="cd-timeline-img cd-seeing">
+        <i class="fa fa-check"></i>
       </div> <!-- cd-timeline-img -->
 
       <div class="cd-timeline-content">
-        <h2><%=step.title %></h2>
-        <a href="#0" class="cd-read-more">Read step</a>
-        <span class="cd-date"><%= Time.now %> </span>
+        <div>
+
+        <h4 id="step-title-timeline"><%=step.title %></h4>
+        <i class="fas fa-video" id="content-icon"></i>
+
+        </div>
       </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
-  </section> <!-- cd-timeline -->
 
 <% end %>
