--- a/app/views/steplists/edit.html.erb
+++ b/app/views/steplists/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Steplists#edit</h1>
-<%= render 'shared/form_steplist'  %>
-<p>Find me in app/views/steplists/edit.html.erb</p>
+<div class="container">
+  <h1>Modify your steplist</h1>
+  <%= render 'shared/form_steplist'  %>
+</div>
