--- a/app/views/steplists/new.html.erb
+++ b/app/views/steplists/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Steplists#new</h1>
-
-<%= render 'shared/form_steplist' %>
-
-<p>Find me in app/views/steplists/new.html.erb</p>
+<div class="container">
+  <h1>Create your steplist</h1>
+  <%= render 'shared/form_steplist' %>
+</div>
