--- a/app/views/steps/edit.html.erb
+++ b/app/views/steps/edit.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for([@steplist, @step] ) do |f| %>
-<%= f.input :title %>
-<%= f.input :description %>
-<%= f.submit %>
-<% end %>
+<div class="container">
+  <%= simple_form_for([@steplist, @step] ) do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.submit %>
+  <% end %>
+</div>
