Step card size solved + standard timeline icon size

--- a/app/views/shared/_step_card.html.erb
+++ b/app/views/shared/_step_card.html.erb
@@ -2,7 +2,7 @@
 
     <div class="cd-timeline-block">
       <div class="cd-timeline-img cd-seeing">
-        <i class="fa fa-check"></i>
+        <i class="fa fa-check" id="center-icon"></i>
       </div> <!-- cd-timeline-img -->
 
       <div class="cd-timeline-content">
@@ -16,3 +16,4 @@
     </div> <!-- cd-timeline-block -->
 
 <% end %>
+
