--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -8,6 +8,10 @@ Modules - reusable parts of our design
   width: 70%;
   max-width: 900px;
   margin: 0 auto;
+  h4, .h4, h5, .h5, h6, .h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 }
 .cd-container::after {
   /* clearfix */
@@ -21,6 +25,9 @@ Modules - reusable parts of our design
 Main components
 
 -------------------------------- */
+
+
+
 
 #cd-timeline {
   position: relative;
@@ -53,6 +60,7 @@ Main components
 .cd-timeline-block {
   position: relative;
   margin: 2em 0;
+
 }
 .cd-timeline-block::after {
   clear: both;
@@ -75,6 +83,7 @@ Main components
   .cd-timeline-block:last-child {
     margin-bottom: 0px;
   }
+
 }
 
 .cd-timeline-img {
@@ -97,23 +106,26 @@ Main components
   margin-top: -12px;
 }
 .cd-timeline-img.cd-done {
-  background: #75ce66;
+  background: $green;
 }
 .cd-timeline-img.cd-seeing {
-  background: #c03b44;
+  background: $stepify-salmon;
 }
 .cd-timeline-img.cd-unseen {
-  background: #f0ca45;
+  background: $stepify-light-gray;
 }
 @media only screen and (min-width: 1170px) {
   .cd-timeline-img {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     left: 50%;
-    margin-left: -30px;
+    margin-left: -20px;
     /* Force Hardware Acceleration in WebKit */
     -webkit-transform: translateZ(0);
     -webkit-backface-visibility: hidden;
+    .fa{
+
+    }
   }
   .cssanimations .cd-timeline-img.is-hidden {
     visibility: hidden;
@@ -184,6 +196,7 @@ Main components
   border-radius: 0.25em;
   // padding: 1em;
   box-shadow: 0 3px 0 #d7e4ed;
+  min-width: 150px;
 }
 .cd-timeline-content::after {
   clear: both;
@@ -266,6 +279,8 @@ Main components
     font-size: 16px;
     font-size: 1rem;
   }
+
+
   .cd-timeline-block:nth-child(even) .cd-timeline-content {
     float: right;
   }
