--- a/app/assets/stylesheets/pages/_steplist-show.scss
+++ b/app/assets/stylesheets/pages/_steplist-show.scss
@@ -15,8 +15,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: $stepify-dark-gray;
-  color: $light-gray;
+  background-color: $stepify-light-gray;
+  color: $gray;
+  box-shadow: 0 3px 0 #d7e4ed;
   ul{
     margin: 10px;
   }
@@ -26,4 +27,5 @@
     float: left;
     margin: 0px 15px;
   }
+
 }
