--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -47,6 +47,15 @@
 
 <!-- RENDER LÍNEA DE TIEMPO -->
 
+
+<div class = "steplist-show-infobar">
+    <ul>
+      <li>Author: <%= @steplist.id  %></li>
+      <li>Last edited: <%= @steplist.steps.count %></li>
+      <li>Completion: <%= @steplist.id  %></li>
+    </ul>
+</div>
+
 <div style="background-color: #F2F2F2; ">
 <section id="cd-timeline" class="cd-container">
  <%= render 'shared/step_card' %>
