--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,14 +3,22 @@
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo.png", height: 50 %>
   <% end %>
+  <%= form_tag steplists_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "See the steps for..."
+  %>
+<% end %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <% if user_signed_in? %>
 
+
       <!-- Links when logged in -->
-      <%= link_to "My Steplists", steplists_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "My Steplists", steplists_path(my_steplists: true), class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "New Steplist", new_steplist_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
 
