--- a/app/views/steplists/new.html.erb
+++ b/app/views/steplists/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1> <%= @steplist.errors %></h1>
   <h1>Create your steplist</h1>
   <%= render 'shared/form_steplist' %>
 </div>
