--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -6,15 +6,15 @@ Modules - reusable parts of our design
 .cd-container {
   /* this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width */
   width: 70%;
-  max-width: 900px;
+  max-width: 650px;
   margin: 0 auto;
-    a{
-      text-decoration: none;
-    }
+  a{
+    text-decoration: none;
+  }
   h4, .h4, h5, .h5, h6, .h6 {
     margin-top: 0;
     margin-bottom: 0;
-}
+  }
 }
 .cd-container::after {
   /* clearfix */
@@ -30,13 +30,12 @@ Main components
 -------------------------------- */
 
 
-
-
 #cd-timeline {
   position: relative;
-  padding: 2em 0;
-  margin-top: 2em;
-  margin-bottom: 2em;
+  padding-top: 4em;
+  padding-bottom: 3em;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 #cd-timeline::before {
   /* this is the vertical line */
@@ -51,8 +50,8 @@ Main components
 
 @media only screen and (min-width: 1170px) {
   #cd-timeline {
-    margin-top: 3em;
-    margin-bottom: 3em;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
   #cd-timeline::before {
     left: 50%;
@@ -198,12 +197,12 @@ Main components
   background: #ffffff;
   border-radius: 0.25em;
   // padding: 1em;
-  box-shadow: 0 3px 0 #d7e4ed;
+  box-shadow: 0 3px 0 #D3D3D3;
   min-width: 150px;
-   &:hover{
-      background: #F0F0F0;
-      color: white;
-   }
+  &:hover{
+    background: #F0F0F0;
+    color: white;
+  }
 }
 .cd-timeline-content::after {
   clear: both;
@@ -214,7 +213,7 @@ Main components
   color: #303e49;
 }
 .cd-timeline-content p, .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-  font-size: 13px;
+  font-size: 20px;
   font-size: 0.8125rem;
 }
 .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
@@ -237,7 +236,7 @@ Main components
 .cd-timeline-content .cd-date {
   float: left;
   padding: .8em 0;
-  opacity: .7;
+
 }
 .cd-timeline-content::before {
   content: '';
@@ -290,6 +289,10 @@ Main components
 
   .cd-timeline-block:nth-child(even) .cd-timeline-content {
     float: right;
+    .edit-icons-container{
+      float: right
+    }
+
   }
   .cd-timeline-block:nth-child(even) .cd-timeline-content::before {
     // top: 24px;
