--- a/app/assets/stylesheets/components/_steplist-card.scss
+++ b/app/assets/stylesheets/components/_steplist-card.scss
@@ -5,7 +5,8 @@
   border-color: $stepify-dark-gray;
   padding: 10px;
   margin: 15px;
-
+  height: 120px;
+  text-align: center;
   // padding: 1em;
   box-shadow: 0 3px 0 #d7e4ed;
   min-width: 150px;
@@ -16,5 +17,8 @@
    }
    a{
     text-decoration: none;
+    color: $stepify-dark-gray;
    }
 }
+
+
