--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,6 +12,6 @@ $stepify-background: #BDC9C7;
 $stepify-salmon: #FD896D;
 $stepify-dark-salmon: #C96142;
 $stepify-gray: #999999;
-$stepify-dark-gray: #2C2C2C;
+$stepify-dark-gray: #565252;
 $stepify-light-gray: #F2F2F2;
 
