--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,8 +49,7 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <div class="btn nav-bar-btn"> Create Step-list</div>
-
+    <div class="btn nav-bar-btn"> Create Step-list</div>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
@@ -68,3 +67,24 @@
   </div>
 </div>
 
+
+<div id='cssmenu'>
+<ul>
+  <li class='last'><%= link_to root_path, class: "navbar-wagon-brand" do %>
+  <%= image_tag "logo3.png", height: 190 %>
+  <% end %></li>
+   <li class='first-child'><%= link_to "All Steps", steplists_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+   <li class="last"><%= link_to "New Steplist", new_steplist_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
+<li style=""><div class="search-bar">
+    <%= form_tag steplists_path,method: :get do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "See the steps for..." %>
+    <% end %>
+  </div>
+</li>
+
+</ul>
+
+</div>
