--- a/app/views/shared/_form_step.html.erb
+++ b/app/views/shared/_form_step.html.erb
@@ -1,8 +1,10 @@
 
 <h4>Add a Step to your steplist</h4>
-<%= simple_form_for([steplist, step], remote: true ) do |f| %>
+<%= simple_form_for([steplist, step], :html => { :multipart => true }, remote: true ) do |f| %>
 <%= f.input :title %>
 <%= f.input :description %>
+<%= f.input :photos, as: :file,:input_html => {  :multiple => true }, name: "step[step_attributes][][photos]" %>
+
 <%= f.submit value: 'Add Step', class: 'btn btn-success btn-md' %>
 <% end %>
 
