--- a/app/views/shared/_show_of_step.html.erb
+++ b/app/views/shared/_show_of_step.html.erb
@@ -1,2 +1,11 @@
 
-<h1>This is step: <%= step.title %></h1>
+<p class="step-popup-description"><%= step.description %><p>
+<% if step.photos.any?  %>
+  <div class="image-popup-container">
+    <% step.photos.each do |photo| %>
+    <%= cl_image_tag photo.image, height: 200, width: 300, crop: :fill, class: 'popup-image-item'%>
+    <% end %>
+  </div>
+  <% end %>
+
+
