--- a/app/views/visualizations/dashboard.html.erb
+++ b/app/views/visualizations/dashboard.html.erb
@@ -1,7 +1,6 @@
 <div class="wrapper">
   <div class="container">
-    <h1>Visualizations#dashboard</h1>
-    <h2><%= "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize} Dasbooard"%></h2>
+    <h2><%= "#{current_user.first_name.capitalize} #{current_user.last_name.capitalize} Dashboard"%></h2>
 
     <table class="table">
       <tr>
