--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,11 @@
      <div class="navbar-wagon-right hidden-xs hidden-sm" style="float: right; margin-top: 10px;">
         <div class="navbar-wagon-item">
           <div class="dropdown">
-            <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+            <% if current_user.user_photo.present? %>
+              <%= cl_image_tag current_user.user_photo,class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown"   %>
+              <% else %>
+              <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+            <% end %>
             <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
               <li>
                 <%= link_to edit_user_registration_path do %>
